Fix: now forcing size of the pokemon's sprite (if it's too high, ima fix it later)

--- a/frontend/src/components/BaseFlashcard/BaseFlashcard.css
+++ b/frontend/src/components/BaseFlashcard/BaseFlashcard.css
@@ -694,10 +694,8 @@
 }
 
 .pokemon-sprite {
-  max-width: 100%;
-  max-height: 100%;
-  width: auto;
-  height: auto;
+  width: 100%;
+  height: 100%;
   object-fit: contain;
   filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.2));
 }
